Update container label

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: bunny-labs/foundry-devcontainer:latest
+          tags: ghcr.io/bunny-labs/foundry-devcontainer:latest
